Use CSS Selectors to Style Elements- task 2

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+        h2{
+          color:blue;
+        }
+      </style>
 </head>
 <body>
-    <h2 style="color:red;">CatPhotoApp</h2>
+    <h2>CatPhotoApp</h2>
 <main>
   <p>Click here to view more <a href="#">cat photos</a>.</p>
 
