Use a CSS Class to Style an Element task-3

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <style>
-        h2{
+        .red-text{
           color:blue;
         }
       </style>
 </head>
 <body>
-    <h2>CatPhotoApp</h2>
+    <h2 class="red-text">CatPhotoApp</h2>
 <main>
   <p>Click here to view more <a href="#">cat photos</a>.</p>
 
