--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
     <title>Document</title>
     <style>
         .red-text{
-          color:blue;
+          color:red;
         }
       </style>
 </head>
 <body>
     <h2 class="red-text">CatPhotoApp</h2>
 <main>
-  <p>Click here to view more <a href="#">cat photos</a>.</p>
+  <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
   <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
 
