--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <style>
         .red-text{
           color:red;
+          p{
+            font-size: 16px;
+            }
         }
       </style>
 </head>
