--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
     <style>
         .red-text{
           color:red;
-          p{
+        }
+        p {
             font-size: 16px;
-            }
+            font-family:monospace;
         }
       </style>
 </head>
