--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">-->
     <title>Document</title>
     <style>
         .red-text{
           color:red;
         }
         h2{
-            font-family:lobster;
+            font-family:lobster,monospace;
         }
         p {
             font-size: 16px;
