--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
             font-size: 16px;
             font-family:monospace;
         }
+        .smaller-image{
+            width:100px;
+        }
       </style>
 </head>
 <body>
@@ -25,7 +28,7 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="smaller-image" alt="A cute orange cat lying on its back."></a>
 
   <div>
     <p>Things cats love:</p>
