--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
         .smaller-image{
             width:100px;
         }
+        .thick-green-border{
+            border: 10px solid green;
+        }
       </style>
 </head>
 <body>
@@ -28,7 +31,7 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="smaller-image" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="thick-green-border smaller-image" alt="A cute orange cat lying on its back."></a>
 
   <div>
     <p>Things cats love:</p>
