Add Rounded Corners with border-radius task-11

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         }
         .thick-green-border{
             border: 10px solid green;
+            border-radius:10px;
         }
       </style>
 </head>
