--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         }
         .thick-green-border{
             border: 10px solid green;
-            border-radius:10px;
+            border-radius:50%;
         }
       </style>
 </head>
