--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
             border: 10px solid green;
             border-radius:50%;
         }
+        .silver-background{
+            background-color:silver;
+        }
       </style>
 </head>
 <body>
@@ -34,7 +37,7 @@
 
   <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="thick-green-border smaller-image" alt="A cute orange cat lying on its back."></a>
 
-  <div>
+  <div class="silver-background">
     <p>Things cats love:</p>
     <ul>
       <li>cat nip</li>
