Use an id Attribute to Style an Element task-15

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
         .silver-background{
             background-color:silver;
         }
+        #cat-photo-form{
+    background-color:green;
+  }
       </style>
 </head>
 <body>
