--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
           background-color: blue;
           color: #fff;
           padding: 20px;
+          margin:20px;
         }
       </style>
 </head>
