--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,7 @@
         .blue-box {
           background-color: blue;
           color: #fff;
-          padding: 20px;
-          margin:-15px;
+          padding:40px 20px 20px 40px;
         }
       </style>
 </head>
