--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         .blue-box {
           background-color: blue;
           color: #fff;
-          margin:40px 20px 20px 40px;
+          padding: 40px 20px 20px 40px;
         }
       </style>
 </head>
