Use Clockwise Notation to Specify the Margin of an Element task-22

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         .blue-box {
           background-color: blue;
           color: #fff;
-          padding: 40px 20px 20px 40px;
+          margin: 40px 20px 20px 40px;
         }
       </style>
 </head>
