Inherit Styles from the Body Element task-26

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
     <style>
       body{
         background-color: black;
+        color:green;
+        font-family: monospace;
       }
     </style>
 </head>
 <body>
-  
+  <h1>Hello World</h1>
 </body>
 </html>
