--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,12 @@
         color:green;
         font-family: monospace;
       }
+      .pink-text{
+        color:pink;
+      }
     </style>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1 class="pink-text">Hello World</h1>
 </body>
 </html>
