Override Styles in Subsequent CSS task-28

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,12 @@
       .pink-text{
         color:pink;
       }
+      .blue-text {
+        color: blue;
+      }
     </style>
 </head>
 <body>
-  <h1 class="pink-text">Hello World</h1>
+  <h1 class="pink-text blue-text">Hello World</h1>
 </body>
 </html>
