Override Class Declarations by Styling ID Attributes task-29

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,12 @@
       .blue-text {
         color: blue;
       }
+      #orange-text {
+        color: orange;
+      }
     </style>
 </head>
 <body>
-  <h1 class="pink-text blue-text">Hello World</h1>
+  <h1 id="orange-text" class="pink-text blue-text">Hello World</h1>
 </body>
 </html>
