Override Override Class Declarations with Inline Styles task-30

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,6 @@
     </style>
 </head>
 <body>
-  <h1 id="orange-text" class="pink-text blue-text">Hello World</h1>
+  <h1 id="orange-text" class="pink-text blue-text" style="color:white;">Hello World</h1>
 </body>
 </html>
