Override All Other Styles by using Important task-31

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         font-family: monospace;
       }
       .pink-text{
-        color:pink;
+        color:pink !important;
       }
       .blue-text {
         color: blue;
