Use Hex Code for Specific Colors task-32

--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,11 @@
     <title>Document</title>
     <style>
       body{
-        background-color: black;
-        color:green;
-        font-family: monospace;
-      }
-      .pink-text{
-        color:pink !important;
-      }
-      .blue-text {
-        color: blue;
-      }
-      #orange-text {
-        color: orange;
+        background-color: #000000;
       }
     </style>
 </head>
 <body>
-  <h1 id="orange-text" class="pink-text blue-text" style="color:white;">Hello World</h1>
+  
 </body>
 </html>
