Use Hex Code to Mix Colors  task-33

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,27 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">-->
     <title>Document</title>
     <style>
-      body{
-        background-color: #000000;
+      .red-text {
+        color: #FF0000;
+      }
+      .green-text {
+        color: #00FF00;
+      }
+      .dodger-blue-text {
+        color: #1E90FF;
+      }
+      .orange-text {
+        color: #FFA500;
       }
     </style>
 </head>
 <body>
-  
+  <h1 class="red-text">I am red!</h1>
+
+<h1 class="green-text">I am green!</h1>
+
+<h1 class="dodger-blue-text">I am dodger blue!</h1>
+
+<h1 class="orange-text">I am orange!</h1>
 </body>
 </html>
