--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,12 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">-->
     <title>Document</title>
     <style>
-      .red-text {
-        color: #F00;
-      }
-      .fuchsia-text {
-       color: #F0F;
-      }
-     .cyan-text {
-        color: #0FF;
-      }
-      .green-text {
-        color: #0F0;
+      body {
+        background-color: rgb(0, 0, 0);
       }
     </style>
 </head>
 <body>
-  <h1 class="red-text">I am red!</h1>
 
-  <h1 class="fuchsia-text">I am fuchsia!</h1>
-
-  <h1 class="cyan-text">I am cyan!</h1>
-
-  <h1 class="green-text">I am green!</h1>
 </body>
 </html>
