--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,27 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">-->
     <title>Document</title>
     <style>
-      body {
-        background-color: rgb(0, 0, 0);
+      .red-text {
+        color: rgb(255, 0, 0);
+      }
+      .orchid-text {
+        color: rgb(218, 112, 214);
+      }
+      .sienna-text {
+        color: rgb(160, 82, 45);
+      }
+      .blue-text {
+        color: rgb(0, 0, 255);
       }
     </style>
 </head>
 <body>
+  <h1 class="red-text">I am red!</h1>
 
+  <h1 class="orchid-text">I am orchid!</h1>
+
+  <h1 class="sienna-text">I am sienna!</h1>
+
+  <h1 class="blue-text">I am blue!</h1>
 </body>
 </html>
