Use a custom CSS Variable  task-39

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       .penguin-top {
         top: 10%;
         left: 25%;
-        background: var(--penguin-skin, gray);
+        background:var(--penguin-skin);
         width: 50%;
         height: 45%;
         border-radius: 70% 70% 60% 60%;
@@ -32,7 +32,7 @@
       .penguin-bottom {
         top: 40%;
         left: 23.5%;
-        background: var(--penguin-skin, gray);
+        background: var(--penguin-skin);
         width: 53%;
         height: 45%;
         border-radius: 70% 70% 100% 100%;
@@ -41,7 +41,7 @@
       .right-hand {
         top: 0%;
         left: -5%;
-        background: var(--penguin-skin, gray);
+        background: var(--penguin-skin);
         width: 30%;
         height: 60%;
         border-radius: 30% 30% 120% 30%;
@@ -52,7 +52,7 @@
       .left-hand {
         top: 0%;
         left: 75%;
-        background: var(--penguin-skin, gray);
+        background: var(--penguin-skin);
         width: 30%;
         height: 60%;
         border-radius: 30% 30% 30% 120%;
