--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       .penguin-top {
         top: 10%;
         left: 25%;
-        background:var(--penguin-skin);
+        background:var(--penguin-skin,black);
         width: 50%;
         height: 45%;
         border-radius: 70% 70% 60% 60%;
@@ -32,7 +32,7 @@
       .penguin-bottom {
         top: 40%;
         left: 23.5%;
-        background: var(--penguin-skin);
+        background: var(--penguin-skin,black);
         width: 53%;
         height: 45%;
         border-radius: 70% 70% 100% 100%;
