Change a variable for a specific area  task-43

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       .penguin {
         --penguin-skin: gray;
         --penguin-beak: orange;
+        --penguin-belly:white;
         position: relative;
         margin: auto;
         display: block;
